instances.tf
# Get linux ami id using ssm parameter endpoint in us-east-1
data "aws_ssm_parameter" "linuxAmi" {
  provider = aws.region-master
  name     = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
}

# get linux ami id using ssm parameter in us-west-2
data "aws_ssm_parameter" "linuxAmiOregon" {
  provider = aws.region-worker
  name     = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
}

# create key-pair to connect to ec2 instances via ssh in us-east-1
resource "aws_key_pair" "master-key" {
  provider   = aws.region-master
  key_name   = "jenkins"
  public_key = file("~/.ssh/id_rsa.pub")
}

# create key-pair to connect to ec2 instances via ssh in us-west-2
resource "aws_key_pair" "worker-key" {
  provider   = aws.region-worker
  key_name   = "jenkins"
  public_key = file("~/.ssh/id_rsa.pub")
}

# create ec2 instance in us-east-1
resource "aws_instance" "jenkins-master" {
  provider                    = aws.region-master
  ami                         = data.aws_ssm_parameter.linuxAmi.value
  instance_type               = var.instance-type
  key_name                    = aws_key_pair.master-key.key_name
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.jenkins-sg.id]
  subnet_id                   = aws_subnet.subnet_1.id
  tags = {
    Name = "jenkins_master_tf"
  }
  depends_on = [aws_main_route_table_association.set-master-default-rt-assoc]

  provisioner "local-exec" {
    command = "aws --profile ${var.profile} ec2 wait instance-status-ok --region ${var.region-master} --instance-ids ${self.id} && ansible-playbook --extra-vars 'passed_hosts=tag_Name_${self.tags.Name}'  ansible_templates/jenkins-master-setup.yml"
  }
}

# create ec2 instance in us-west-2
resource "aws_instance" "jenkins-worker-oregon" {
  provider                    = aws.region-worker
  availability_zone           = element(data.aws_availability_zones.azs-oregon.names, 0)
  count                       = var.workers-count
  ami                         = data.aws_ssm_parameter.linuxAmiOregon.value
  instance_type               = var.instance-type
  key_name                    = aws_key_pair.worker-key.key_name
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.jenkins-sg-oregon.id]
  subnet_id                   = aws_subnet.subnet_1_oregon.id
  tags = {
    Name = join("_", ["jenkins_worker_tf", count.index + 1])
  }
  depends_on = [aws_main_route_table_association.set-worker-default-rt-assoc, aws_instance.jenkins-master]

  provisioner "local-exec" {
    command = "aws --profile ${var.profile} ec2 wait instance-status-ok --region ${var.region-worker} --instance-ids ${self.id} && ansible-playbook --extra-vars 'passed_hosts=tag_Name_${self.tags.Name} master_ip=${aws_instance.jenkins-master.private_ip}' ansible_templates/jenkins-worker-setup.yml"
  }
  provisioner "remote-exec" {
    when = destroy
    inline = [
      "java -jar /home/ec2-user/jenkins-cli.jar -auth @/home/ec2-user/jenkins_auth -s http://${aws_instance.jenkins-master.private_ip}:8080 delete-node ${self.private_ip}"
    ]
    on_failure = continue
    connection {
      type        = "ssh"
      user        = "ec2-user"
      private_key = file("~/.ssh/id_rsa")
      host        = self.public_ip
    }
  }
}

# Create swap volume for every worker 
resource "aws_ebs_volume" "volume-swap" {
  provider          = aws.region-worker
  count             = var.workers-count
  availability_zone = element(data.aws_availability_zones.azs-oregon.names, 0)
  size              = 8
  tags = {
    Name = join("_", ["jenkins_worker_tf", count.index + 1])
  }
}

# attach volumes to workers, create and enable swap partition 
resource "aws_volume_attachment" "ebs_att" {
  provider    = aws.region-worker
  count       = var.workers-count
  device_name = "/dev/sdh"
  volume_id   = "${element(aws_ebs_volume.volume-swap.*.id, count.index)}"
  instance_id = "${element(aws_instance.jenkins-worker-oregon.*.id, count.index)}"

  depends_on = [aws_ebs_volume.volume-swap, aws_instance.jenkins-worker-oregon]

  # tags = {
  #  Name = join("_", ["jenkins_worker_tf", count.index + 1])
  # }

  provisioner "local-exec" {
    command = "sleep 120; ansible-playbook --extra-vars 'passed_hosts=tag_Name_${element(aws_instance.jenkins-worker-oregon.*.tags.Name, count.index)}' ansible_templates/worker-swap.yml"
  }
}
